--- a/src/RC.Input/RC.Input/RC.Input.csproj
+++ b/src/RC.Input/RC.Input/RC.Input.csproj
@@ -47,13 +47,84 @@
     <Reference Include="mscorlib">
       <Private>False</Private>
     </Reference>
+    <Reference Include="RC.Engine, Version=1.0.0.0, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Dependencies\RC.Engine.dll</HintPath>
+    </Reference>
     <Reference Include="System">
       <Private>False</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Events\Event.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>Event</Name>
+    </Compile>
+    <Compile Include="Events\KeyboardEvent.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>KeyboardEvent</Name>
+    </Compile>
+    <Compile Include="Events\MouseEvent.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>MouseEvent</Name>
+    </Compile>
+    <Compile Include="Events\XBox360GamePadEvent.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>XBox360GamePadEvent</Name>
+    </Compile>
+    <Compile Include="Internal\RealKeyboardState.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>RealKeyboardState</Name>
+    </Compile>
+    <Compile Include="Internal\RealMouseState.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>RealMouseState</Name>
+    </Compile>
+    <Compile Include="Internal\RealXBoxGamePad.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>RealXBoxGamePad</Name>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scheme.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>Scheme</Name>
+    </Compile>
+    <Compile Include="Types\EventTypes.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>EventTypes</Name>
+    </Compile>
+    <Compile Include="Types\InputType.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>InputType</Name>
+    </Compile>
+    <Compile Include="Types\MouseButtonTypes.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>MouseButtonTypes</Name>
+    </Compile>
+    <Compile Include="Types\MouseInput.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>MouseInput</Name>
+    </Compile>
+    <Compile Include="Types\XBox360GamePadTypes.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>XBox360GamePadTypes</Name>
+    </Compile>
+    <Compile Include="Watchers\Keyboard.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>Keyboard</Name>
+    </Compile>
+    <Compile Include="Watchers\Mouse.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>Mouse</Name>
+    </Compile>
+    <Compile Include="Watchers\Watcher.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>Watcher</Name>
+    </Compile>
+    <Compile Include="Watchers\XBox360GamePad.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>XBox360GamePad</Name>
+    </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA\Game Studio Express\v1.0\Microsoft.Xna.ContentPipeline.targets" />
