Updated projects to send build output to the Dependecies folder.

--- a/src/RC.Engine/RC.Engine/RC.Engine.csproj
+++ b/src/RC.Engine/RC.Engine/RC.Engine.csproj
@@ -185,4 +185,7 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <PropertyGroup>
+    <PostBuildEvent>xcopy "$(ProjectDir)$(OutDir)*" "$(ProjectDir)..\..\Dependencies"  /i /d /y</PostBuildEvent>
+  </PropertyGroup>
 </Project>
