--- a/src/RC.Gui/RC.Gui/RC.Gui.csproj
+++ b/src/RC.Gui/RC.Gui/RC.Gui.csproj
@@ -178,4 +178,7 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <PropertyGroup>
+    <PostBuildEvent>xcopy "$(ProjectDir)$(OutDir)*" "$(ProjectDir)..\..\Dependencies"  /i /d /y</PostBuildEvent>
+  </PropertyGroup>
 </Project>
