--- a/src/RC.Input/RC.Input/RC.Input.csproj
+++ b/src/RC.Input/RC.Input/RC.Input.csproj
@@ -136,4 +136,7 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <PropertyGroup>
+    <PostBuildEvent>xcopy "$(ProjectDir)$(OutDir)*" "$(ProjectDir)..\..\Dependencies"  /i /d /y</PostBuildEvent>
+  </PropertyGroup>
 </Project>
